--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,11 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    archiveFileName = 'app.jar'
+}
+
+bootRun {
+    dependsOn bootJar
+}
